# jeex-plan

./: .checkov.yaml  .coderabbit.yaml  .coderabbit.yml  .editorconfig  .env.example  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .sqlfluff  .sqlfluffignore  AGENTS.md  CLAUDE.md  Makefile  QWEN.md  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  jeex-plan.code-workspace
.claude/: settings.local.json
.claude/agents/: agent-expert.md  api-security-audit.md  architecture-modernizer.md  frontend-developer.md  hackathon-ai-strategist.md  python-pro.md  react-performance-optimizer.md  research-brief-generator.md  security-engineer.md  task-decomposition-expert.md  tech-architect.md  tech-frontend.md  tech-pm.md  tech-python.md  tech-qa.md  technical-researcher.md  test-engineer.md  url-context-validator.md
.claude/commands/deployment/: add-changelog.md
.claude/commands/dev/: coderabbit.md  cr.md  pre-commit.md  test.md
.claude/commands/documentation/: create-architecture-documentation.md  doc-api.md
.claude/commands/project-management/: create-jtbd.md  create-prd.md  create-prp.md  pac-configure.md  pac-create-epic.md  pac-create-ticket.md  pac-update-status.md  pac-validate.md  project-health-check.md  release.md  todo.md
.claude/commands/security/: dependency-audit.md  penetration-test.md  secrets-scanner.md  (+1 more)
.cursor/rules/: tech-architect.mdc  tech-frontend.mdc  tech-pm.mdc  tech-python.mdc  tech-qa.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/hooks/: README.md  pre-commit
.qwen/: settings.json
.qwen/agents/: tech-frontend.md  tech-python.md  tech-qa.md
backend/: .env  ARCHITECTURE_FIXES.md  CODE_QUALITY.md  Dockerfile  Dockerfile.simple  README.md  alembic.ini  alembic_models.py  main.py  pyproject.toml  requirements.txt  test_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_multi_tenant_schema.py  002_add_auth_constraints_and_indexes.py  003_add_rbac_models_and_update_user_auth.py  0aad7c4f25d0_update_indexes.py  2c4a355c7c2a_drop_tenant_slug_active_index.py  5fde290802d2_add_partial_indexes_for_active_records.py  9e95af11ace6_create_multi_tenant_schema.py  a1b2c3d4e5f6_update_agent_execution_enum_native.py  add_document_generation_models.py  cbe2ed1ce948_add_authentication_constraints_and_indexes.py  f80535a935e7_add_rbac_models_and_update_user_auth.py  update_doc_version_indexes.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  qdrant.py  redis.py  vault.py
backend/app/agents/: __init__.py  test_agents.py
backend/app/agents/base/: __init__.py  agent_base.py  llm_client.py  quality_control.py  vector_context.py
backend/app/agents/contracts/: __init__.py  base.py  business_analyst.py  engineering_standards.py  project_planner.py  solution_architect.py
backend/app/agents/implementations/: __init__.py  business_analyst.py  engineering_standards.py  project_planner.py  solution_architect.py
backend/app/agents/orchestration/: __init__.py  orchestrator.py  workflow.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  agents.py  auth.py  document_generation.py  health.py  projects.py  test.py  vectors.py
backend/app/api/schemas/: __init__.py  auth.py  project.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  hnsw_config.py  logger.py  oauth.py  observability.py  password_service.py  token_blacklist.py  token_service.py  vault.py  vault_rotation.py
backend/app/middleware/: rate_limit.py  security.py  tenant.py  tenant_filter.py
backend/app/models/: __init__.py  agent_execution.py  base.py  document.py  document_version.py  export.py  project.py  rbac.py  tenant.py  user.py
backend/app/repositories/: __init__.py  agent_execution.py  base.py  document.py  document_version.py  export.py  project.py  tenant.py  user.py
backend/app/schemas/: vector.py
backend/app/services/: __init__.py  cache.py  document_generation.py  embedding.py  export.py  qdrant.py  rbac.py  streaming.py  user.py  uuid_service.py
backend/config/: otel-collector-minimal.yaml  otel-collector.yaml  qdrant-minimal.yaml  qdrant.yaml  redis-start.sh  redis.conf  vault-config.json  vault-minimal.hcl  vault.hcl
backend/scripts/: check_syntax.py  code_quality_check.py  health_check.py  init-db.sql  init_vault.py  lint_format.sh  vector_benchmark.py
backend/tests/: __init__.py  conftest.py  demo_security_fix.py  test_auth_comprehensive.py  test_auth_performance.py  test_authentication.py  test_config_security.py  test_cookie_authentication.py  test_csrf_protection.py  test_health.py  test_middleware.py  test_models.py  test_multitenant_auth.py  test_project_management.py  test_rbac.py  test_repositories.py  test_token_blacklist.py  test_vault_integration.py  test_vector_database.py
docs/: about.md  architecture.md  feature.md  prompt.md  specs.md
docs/inplementations/: DOCUMENT_GENERATION_IMPLEMENTATION.md  POSTGRESQL_18_IMPROVEMENTS_RU.md
docs/plans/: 01-infrastructure.md  02-authentication.md  03-vector-database.md  04-agent-orchestration.md  05-document-generation.md  06-frontend-implementation.md  07-export-system.md  07-testing.md  08-export-system.md  08-quality-assurance.md  09-observability.md  09-quality-assurance.md  10-observability.md  10-testing.md  11-testing.md  overview.md
docs/security/: SECURITY_CRITICAL_TOKEN_STORAGE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_QUICK_REFERENCE.md
frontend/: .env  .npmrc  .prettierrc  Dockerfile  Dockerfile.simple  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  stylelint.config.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.scss
nginx/: nginx.conf
scripts/: health-check.sh  init-db.sh  probe_auth_endpoints.py  setup-git-hooks.sh  setup.sh
tests/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
tests/e2e/: auth.spec.ts  infrastructure.spec.ts
tests/setup/: global-setup.ts  global-teardown.ts
(+104 files in other folders)
